--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,23 @@ certs/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+pacriko/bin/activate.csh
+pacriko/bin/activate.fish
+pacriko/bin/Activate.ps1
+pacriko/bin/dotenv
+pacriko/bin/email_validator
+pacriko/bin/fastapi
+pacriko/bin/httpx
+pacriko/bin/markdown-it
+pacriko/bin/normalizer
+pacriko/bin/pip
+pacriko/bin/pip3
+pacriko/bin/pip3.11
+pacriko/bin/pygmentize
+pacriko/bin/python
+pacriko/bin/python3
+pacriko/bin/python3.11
+pacriko/bin/typer
+pacriko/bin/uvicorn
+pacriko/bin/watchfiles
+pacriko/include/site/python3.11/greenlet/greenlet.h
